; ModuleID = '/home/carl/AnghaBench/reactos/base/shell/cmd/extr_echo.c_CommandEchos.c'
source_filename = "/home/carl/AnghaBench/reactos/base/shell/cmd/extr_echo.c_CommandEchos.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [20 x i8] c"CommandEchos: '%s'\0A\00", align 1
@.str.1 = private unnamed_addr constant [3 x i8] c"/?\00", align 1
@STRING_ECHO_HELP1 = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [3 x i8] c"%s\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @CommandEchos(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = call i32 @debugstr_aw(i32 %4)
  %6 = call i32 @TRACE(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0), i32 %5)
  %7 = load i32, i32* %3, align 4
  %8 = call i32 @_T(i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.1, i64 0, i64 0))
  %9 = call i32 @_tcsncmp(i32 %7, i32 %8, i32 2)
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %14, label %11

11:                                               ; preds = %1
  %12 = load i32, i32* @STRING_ECHO_HELP1, align 4
  %13 = call i32 @ConOutResPuts(i32 %12)
  store i32 0, i32* %2, align 4
  br label %18

14:                                               ; preds = %1
  %15 = call i32 @_T(i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.2, i64 0, i64 0))
  %16 = load i32, i32* %3, align 4
  %17 = call i32 @ConOutPrintf(i32 %15, i32 %16)
  store i32 0, i32* %2, align 4
  br label %18

18:                                               ; preds = %14, %11
  %19 = load i32, i32* %2, align 4
  ret i32 %19
}

declare dso_local i32 @TRACE(i8*, i32) #1

declare dso_local i32 @debugstr_aw(i32) #1

declare dso_local i32 @_tcsncmp(i32, i32, i32) #1

declare dso_local i32 @_T(i8*) #1

declare dso_local i32 @ConOutResPuts(i32) #1

declare dso_local i32 @ConOutPrintf(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
